# archive-scan-service

./: .gitignore  README.md  pyproject.toml  run.py
app/: __init__.py  config.py  errors.py  logging_config.py  main.py
app/api/: __init__.py  dependencies.py  devices.py  events.py  health.py  pages.py  responses.py  tasks.py
app/models/: __init__.py  enums.py  records.py  schemas.py
app/repositories/: __init__.py  database.py  migrations.py  page_repository.py  task_repository.py
app/scanner/: __init__.py  capability_codec.py  capability_service.py  file_transfer.py  pnp_status.py  protocol.py  twain_backend.py  twain_window.py
app/services/: __init__.py  event_hub.py  page_service.py  recovery_service.py  task_service.py  thumbnail_service.py
app/tray/: __init__.py  application.py  device_notifications.py  startup.py
app/worker/: __init__.py  client.py  messages.py  process.py  supervisor.py
docs/交付/: GPLv2许可证与试用交付说明.md
docs/决策记录/: 0001-技术选型与范围.md
docs/测试/: KODAK i2000系列驱动测试与验收.md  KODAK i2600测试与验收.md
docs/规范/: API设计规范.md  TWAIN开发规则.md  开发规范.md
docs/设计/: Windows Python本机扫描服务技术方案.md
docs/需求/: 功能清单.md
scripts/: verify_twain_runtime.py
tests/integration/: test_api.py  test_recovery.py  test_twain_capability_manual.py  test_twain_device_manual.py  test_twain_scan_manual.py  test_websocket.py  test_worker_lifecycle.py
tests/unit/: test_application_context.py  test_capability_codec.py  test_capability_service.py  test_config.py  test_device_notifications.py  test_event_hub.py  test_file_transfer.py  test_logging_config.py  test_page_service.py  (+15 more)
(+9 files in other folders)
