[build-system]
requires = ["setuptools>=75,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "archive-scan-service"
version = "0.1.0"
description = "Windows 本机档案扫描服务"
requires-python = "==3.12.13"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic>=2.10,<3",
  "pillow>=11,<12",
  "pytwain==2.3.0",
  "pystray>=0.19,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.25,<1",
  "httpx>=0.28,<1",
  "pyinstaller>=6,<7",
  "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: 需要真实 Windows 设备或跨进程环境的集成测试",
]
